Correction du contraste WVAG et mise à jour des labels

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -177,7 +177,7 @@ th, td {
 
 th {
     background-color: #8EACCD;
-    color: white;
+    color: #333;
 }
 
 /* Style général pour le formulaire */
@@ -232,7 +232,7 @@ form input[type="email"]:focus {
 form input[type="submit"] {
     font-family: "Raleway", sans-serif;
     font-size: 1rem;
-    background-color: #8EACCD;
+    background-color: #36541b; /* Dark green for better contrast */
     color: #fff;
     padding: 10px;
     border: none;
@@ -243,7 +243,7 @@ form input[type="submit"] {
 
 /* Effet hover sur le bouton */
 form input[type="submit"]:hover {
-    background-color: #6c92b7;
+    background-color: #2c4315;
 }
 
 /* Style pour le fieldset */
